MB-61623: Make backfill completion resilient to zero measured runtime

Backfilling an empty snapshot is very fast, especially on ephemeral
buckets.

Additionally, if the duration is very small, the computed rates could
overflow the int cast, so keep them as floating point and use formatting
flags for rounding.

Change-Id: I621f8c3a6ffcbc73149f81baeb36846c90a87511
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/209242
Well-Formed: Restriction Checker
Reviewed-by: Jim Walker <jim@couchbase.com>
Tested-by: Pavlos Georgiou <pavlos.georgiou@couchbase.com>